--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "transl"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2024"
 
 [dependencies]
 cliclack = "0.3.6"
 rust-translate = "0.1.3"
-serde_json = "1.0.140"
+serde_json = { version = "1.0.140", features = ["preserve_order" ] }
 tokio = "1.45.1"
